# weaversolver

./: pyproject.toml
weaversolver/: __init__.py  game.py  tests.py  utils.py  words.py
weaversolver/data/: four_letter_words.txt
