[tool.poetry]
name = "weaversolver"
version = "0.1.2"
description = ""
authors = ["Tom Punihaole <tom.punihaole@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

include = ['weaversolver/data/*']
